[ENHANCEMENT] Update gitignote

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ Semana2/Actividad5/main
 Semana2/Tarea1/tempCodeRunnerFile.cpp
 
 Semana4/Tarea4/test.cpp
+
+ReclutAvengers/tests.cpp
+
+ReclutAvengers/tempCodeRunnerFile.cpp
